--- a/docker/git/Dockerfile
+++ b/docker/git/Dockerfile
@@ -23,37 +23,52 @@ RUN yum -y install make gcc automake ncurses-devel \
 
 # git-flow
 WORKDIR /usr/local/src/gitflow
-RUN wget -q -O - --no-check-certificate https://github.com/nvie/gitflow/raw/develop/contrib/gitflow-installer.sh | bash
-RUN rm -rf /usr/local/src/gitflow
+RUN wget -q -O - --no-check-certificate https://github.com/nvie/gitflow/raw/develop/contrib/gitflow-installer.sh | bash \
+ && rm -rf /usr/local/src/gitflow
 
 
 # tig
 WORKDIR /usr/local/src/tig
 RUN wget https://github.com/jonas/tig/releases/download/tig-2.5.0/tig-2.5.0.tar.gz \
- && tar xzf tig-2.5.0.tar.gz
-
-WORKDIR /usr/local/src/tig/tig-2.5.0
-RUN ./autogen.sh \
+ && tar xzf tig-2.5.0.tar.gz \
+ && cd tig-2.5.0 \
+ && ./autogen.sh \
  && ./configure --without-ncurses \
  && make prefix=/usr/local \
- && make install prefix=/usr/local
-
-RUN rm -rf /usr/local/src/tig
+ && make install prefix=/usr/local \
+ && rm -rf /usr/local/src/tig
 
 
 # git secret
 WORKDIR /usr/local/src/git-secret
-RUN git clone https://github.com/awslabs/git-secrets.git
+RUN git clone https://github.com/awslabs/git-secrets.git \
+ && cd git-secrets \
+ && make install prefix=/usr/local \
+ && rm -rf /usr/local/src/git-secret
 
-WORKDIR /usr/local/src/git-secret/git-secrets
-RUN make install prefix=/usr/local
 
-RUN rm -rf /usr/local/src/git-secret
+# git-completion.bash
+WORKDIR /root
+RUN wget https://raw.githubusercontent.com/git/git/master/contrib/completion/git-completion.bash -O ~/.git-completion.bash \
+ && chmod a+x ~/.git-completion.bash \
+ && echo "source ~/.git-completion.bash" >> ~/.bashrc \
+ && source ~/.bashrc
+
+
+# git-prompt.sh
+WORKDIR /root
+RUN wget https://raw.githubusercontent.com/git/git/master/contrib/completion/git-prompt.sh -O ~/.git-prompt.sh \
+ && chmod a+x ~/.git-prompt.sh \
+ && echo "source ~/.git-prompt.sh" >> ~/.bashrc \
+ && source ~/.bashrc
 
 
 # bashrc
-RUN echo 'export PS1="[\u@"$(hostname -i)" \w]$ "' >> ~/.bashrc
-RUN echo 'export PS1="[docker_git \w]$ "' >> ~/.bashrc
+# RUN echo 'export PS1="[\u@"$(hostname -i)" \w]$ "' >> ~/.bashrc
+# RUN echo 'export PS1="[docker_git \w]$ "' >> ~/.bashrc
+RUN echo 'export PS1="\[\033[1;34m\]docker_git \[\033[0;33m\]\w\[\033[36m\]\$(__git_ps1) \[\033[0;00m\]\\]\n$ "' >> ~/.bashrc
+
+
 RUN echo 'alias ll="ls -al"' >> ~/.bashrc
 RUN echo 'alias vi="vim"' >> ~/.bashrc
 ENV EDITOR=vim
@@ -63,9 +78,6 @@ ENV EDITOR=vim
 
 RUN git secrets --register-aws --global
 
-#RUN git config --global user.name "`echo $GIT_USER_NAME`"
-#RUN git config --global user.email "\$GIT_USER_EMAIL"
-#RUN git flow init -d -f
 
 # finalize
 WORKDIR /git
